<resources>
    <string name="app_name">Taste Scout</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="search_for_something">Search For Something</string>
    <string name="search">Search</string>
    <string name="movies">Movies</string>
    <string name="songs">Songs</string>
    <string name="tv_shows">Tv Shows</string>
    <string name="books">Books</string>
    <string name="authors">Authors</string>
    <string name="games">Games</string>
    <string name="button">Button</string>
    <string name="search_button">Search Button</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="email_address">E-mail Address</string>
    <string name="email">E-mail Address: </string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="dont_have_account">Don\'t have account?</string>
    <string name="register">Register</string>
    <string name="check_connection">Check your internet connection.</string>
    <string name="cant_send">we cann\'t found this email</string>
    <string name="vrify_email">Verify your E-mail then log in normally.</string>
    <string name="profile">profile</string>
    <string name="saved">saved items</string>
    <string name="log_out">log out</string>
    <string name="user_name">User Name: </string>
    <string name="number_of_saved">Saved Items: </string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="check_email">Failed:check Email and Password</string>
    <string name="unknown">Sorry, we haven\'t heard of this item yet</string>
    <string name="item_poster">item poster image from wekipedia page</string>
    <string name="share_body">TasteScout App recommended me </string>
    <string name="think">What do you think of it?</string>
</resources>
