<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".FirebaseAuthActivity">

    <EditText
        android:id="@+id/email_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="36dp"
        android:layout_marginRight="36dp"
        android:autofillHints="Email"
        android:ems="10"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        tools:ignore="UnusedAttribute" />

    <EditText
        android:id="@+id/password_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="36dp"
        android:layout_marginRight="36dp"
        android:autofillHints="password"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        tools:ignore="UnusedAttribute" />
    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        >
        <Button
            android:id="@+id/login_bt"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:background="@color/colorAccent"
            android:text="@string/login"
            android:onClick="login"
            />
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progress"
            />
    </FrameLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/dont_have_account"
        android:textSize="15sp"
        />
    <TextView
        android:id="@+id/register_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/register"
        android:textColor="@color/colorAccent"
        />

</LinearLayout>